--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,8 @@ body{
 }
 
 .info_box.activeInfo,
-.quiz_box.activeQuiz{
+.quiz_box.activeQuiz,
+.result_box.activeResult{
     z-index: 5;
     opacity: 1;
     pointer-events: auto;
@@ -179,6 +180,14 @@ body{
     user-select: none;
 }
 
+.quiz_box header .time_line{
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    height: 3px;
+    background: #007bff;
+}
+
 .quiz_box section{
     padding: 25px 30px 20px 30px;
     background: #fff;
@@ -248,6 +257,17 @@ section .option_list .option:hover{
     border-color: #c3e6cb;
 }
 
+.option_list .option.incorrect{
+    color: #721c24;
+    background: #f8d7da;
+    border-color: #f5c6cb;
+}
+
+.option_list .option.disabled{
+    pointer-events: none;
+
+}
+
 .quiz_box footer{
     height: 60px;
     width: 100%;
@@ -272,6 +292,7 @@ footer .total_que span p:first-child{
 }
 
 footer .next_btn{
+    display: none;
     height: 40px;
     padding: 0 13px;
     font-size: 18px;
