--- a/public/css/diagPStyle.css
+++ b/public/css/diagPStyle.css
@@ -5,6 +5,7 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+
 .texto{
     padding: 5px 0;
     margin: 10px auto;
@@ -117,8 +118,9 @@ form{
 
 .lienzo{
     
-    position: relative;
-    float: left; 
+}
+canvas{
+    display: flex;
 }
 .esc{
     text-align: center;
@@ -243,4 +245,28 @@ td{
 }
 table{
     margin-top: 30px;
+}
+
+@media screen and (max-width: 1600px) {
+    .left-side{
+        width: 200px;
+        height: 100vh;
+        float: right; 
+        background-image: linear-gradient(to right, #1847ac, #61229c);
+        /* background: rgb(26, 31, 44); */
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        float: right;
+        position: fixed;
+        right: 0;
+    }
+
+    canvas{
+        margin-right: 200px;
+    }
+    .lienzo{
+        margin-right: 200px;
+    }
+}
 }
